--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,7 +95,9 @@
     <!-- Label for remove drop target. [CHAR_LIMIT=20] -->
     <string name="remove_drop_target_label">Remove</string>
     <!-- Label for uninstall drop target. [CHAR_LIMIT=20]-->
-    <string name="uninstall_drop_target_label">Uninstall</string>
+    <string name="uninstall_drop_target_label">卸载</string>
+    <string name="folder_drop_target_label">文件夹</string>
+    <string name="select_drop_target_label">选择</string>
     <!-- Label for app info drop target. [CHAR_LIMIT=20] -->
     <string name="app_info_drop_target_label">App info</string>
     <!-- Label for install drop target. [CHAR_LIMIT=20] -->
@@ -344,4 +346,7 @@
     <string name="work_mode_off_label">Notifications and apps are off</string>
     <string name="bottom_work_tab_user_education_close_button">Close</string>
     <string name="bottom_work_tab_user_education_closed">Closed</string>
+    <string name="dialog_uninstall_title">卸载“%s”</string>
+    <string name="dialog_uninstall_content">卸载后其所有数据也将被删除</string>
+    <string name="tv_cancel">取消</string>
 </resources>
